# webgl-calculator

./: README.md  index.html  package-lock.json  package.json  tsconfig.json
src/: background.ts  equations.ts  functions.ts  main.ts  math.glsl  renderer.ts  style.css  t_fragment.glsl  t_fragment.glsl.ts  variables.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: compiler.rs  error.rs  lib.rs  main.rs  parser.rs
src-tauri/src/compiler/: bytecode.rs  tests.rs
src-tauri/src/parser/: arithmetic.rs  ast.rs  operations.rs  simplifier.rs
